--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^4.1.17",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
