--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.1",
+    "next-usequerystate": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-slick": "^0.28.1"
+    "react-slick": "^0.28.1",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
