--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-usequerystate": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
     "use-media": "^1.4.0"
   },
