--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/theme-tools": "^1.2.2",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@typeform/embed-react": "^1.2.1",
     "framer-motion": "^4.1.17",
     "next": "12.0.1",
     "next-usequerystate": "^1.3.0",
