--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@typeform/embed-react": "^1.2.1",
     "framer-motion": "^4.1.17",
-    "next": "12.0.1",
+    "next": "^12.0.7",
     "next-usequerystate": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
